substrate/frame/support/test/tests/runtime_ui/missing_system_pallet.stderr
error: `System` pallet declaration is missing. Please add this line: `System: frame_system,`
  --> tests/runtime_ui/missing_system_pallet.rs:25:16
   |
25 |     pub struct Pallets {}
   |                ^^^^^^^
